--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "countup.js": "^2.9.0",
+    "echarts": "^5.6.0",
     "element-plus": "^2.10.2",
     "pinia": "^3.0.3",
     "sass": "^1.89.2",
     "vue": "^3.5.17",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/countup.js": "^2.0.7",
     "@types/node": "^22.15.32",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
